Fixed and closed #462: no-wrap via CSS rather than hardcoded non-breaking spaces.

--- a/WebApplication/Themes/Default/Screen_Styles.css
+++ b/WebApplication/Themes/Default/Screen_Styles.css
@@ -270,6 +270,7 @@ tr.tableheader td, th {
 	margin: 0px;
 	padding: 2px 5px 2px 5px;
 	border-bottom: solid 1px #DDDDDD;
+	white-space: nowrap;
 }
 
 tr.tablerow td {
